objects/Account/fields/Account_Data_Loading_Checked__c.field-meta.xml
<CustomField>
    <fullName>Account_Data_Loading_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Data Loading Checked</label>
    <type>Checkbox</type>
</CustomField>