objects/Account/fields/Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Notes__c</fullName>
    <inlineHelpText>This fields holds notes for accounts to consider on this parent and all sites.</inlineHelpText>
    <label>Account Notes</label>
    <type>TextArea</type>
</CustomField>