objects/Account/fields/Account_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Image__c</fullName>
    <label>Account Status Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>