objects/Account/fields/Account_Status_Reason_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Reason_del__c</fullName>
    <label>Account Status Reason</label>
    <type>TextArea</type>
</CustomField>