objects/Account/fields/Account_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Account_Terms_and_Conditions__c</fullName>
    <label>Account Terms and Conditions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>