objects/Account/fields/Accounts_Checked_Address__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Checked_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accounts will tick this box when they have confirmed that the addresses on the site are correct.</inlineHelpText>
    <label>Accts - Addr OK ?</label>
    <type>Checkbox</type>
</CustomField>