objects/Account/fields/Accounts_Checked_Sage_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Checked_Sage_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accts Sage Code OK ?</label>
    <type>Checkbox</type>
</CustomField>