objects/Account/fields/Additional_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Instructions__c</fullName>
    <description>Additional Instructions</description>
    <label>Additional Instructions</label>
    <type>TextArea</type>
</CustomField>