objects/Account/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address2</label>
    <type>TextArea</type>
</CustomField>