objects/Account/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <label>Address3</label>
    <type>TextArea</type>
</CustomField>