objects/Account/fields/Address_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Address_Campaign__c</fullName>
    <label>Address Campaign</label>
    <type>TextArea</type>
</CustomField>