objects/Account/fields/Address_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Address_Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>TextArea</type>
</CustomField>