objects/Account/fields/Address_Web__c.field-meta.xml
<CustomField>
    <fullName>Address_Web__c</fullName>
    <label>Address Web</label>
    <type>TextArea</type>
</CustomField>