objects/Account/fields/All_Site_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>All_Site_Total_Amount__c</fullName>
    <label>Total customer spend last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>