objects/Account/fields/AM_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Status__c</fullName>
    <label>AM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DORMANT</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
            <value>
                <fullName>LIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>