objects/Account/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization</label>
    <type>Checkbox</type>
</CustomField>