objects/Account/fields/Beta_PO_Customer_Record__c.field-meta.xml
<CustomField>
    <fullName>Beta_PO_Customer_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Purchase Order Object</description>
    <inlineHelpText>This is a lookup to the Purchase Order Object.
If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Accounts (Beta PO)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>