objects/Account/fields/Beta_Site_Specific_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_Site_Specific_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta Site Specific PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Accounts (Beta Site Specific PO)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>