objects/Account/fields/Booking_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmation_Email__c</fullName>
    <label>Booking Confirmation Email</label>
    <type>Email</type>
</CustomField>