objects/Account/fields/CCTV_O_C_Zone_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>CCTV_O_C_Zone_Monitoring__c</fullName>
    <label>O/C Zone Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>