objects/Account/fields/CCTV_S_C_Zone_Monitoring_Qty__c.field-meta.xml
<CustomField>
    <fullName>CCTV_S_C_Zone_Monitoring_Qty__c</fullName>
    <label>S/C Zone Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>