objects/Account/fields/Check_Product__c.field-meta.xml
<CustomField>
    <fullName>Check_Product__c</fullName>
    <label>Check Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>