objects/Account/fields/Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Status__c</fullName>
    <description>Check Status</description>
    <label>Check Status</label>
    <length>225</length>
    <type>Text</type>
</CustomField>