objects/Account/fields/Company_mail__c.field-meta.xml
<CustomField>
    <fullName>Company_mail__c</fullName>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>