objects/Account/fields/Company_Type_SF__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_SF__c</fullName>
    <label>Company Type SF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>