objects/Account/fields/Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_email__c</fullName>
    <formula>Site_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact email</label>
    <type>Text</type>
</CustomField>