objects/Account/fields/Contact_last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_last_Name__c</fullName>
    <formula>Site_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact last Name</label>
    <type>Text</type>
</CustomField>