objects/Account/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <label>Cost Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>