objects/Account/fields/Current_Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Purchase_Order_No__c</fullName>
    <inlineHelpText>This is a site specific purchase order number, if there is one.</inlineHelpText>
    <label>Current Purchase Order No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>