objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customers</fullName>
            </value>
            <value>
                <fullName>Existing Customers</fullName>
            </value>
            <value>
                <fullName>Lapsed Customers</fullName>
            </value>
            <value>
                <fullName>Not Customers</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>