objects/Account/fields/Customer_Indicates_Manual_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Indicates_Manual_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Indicates Manual Invoicing</label>
    <type>Checkbox</type>
</CustomField>