objects/Account/fields/Customer_Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Purchase Order Required</label>
    <type>Checkbox</type>
</CustomField>