objects/Account/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <label>Customer type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
                <label>Group (over 5 practices)</label>
            </value>
            <value>
                <fullName>Medical (inc. Hospital w/o dental)</fullName>
            </value>
            <value>
                <fullName>MOD/Barracks</fullName>
            </value>
            <value>
                <fullName>NHS Trust Including Community Dental</fullName>
                <label>NHS Trust Including Community Dental &amp; Hospitals</label>
            </value>
            <value>
                <fullName>Podiatry</fullName>
            </value>
            <value>
                <fullName>Prison</fullName>
            </value>
            <value>
                <fullName>Private Healthcare Group</fullName>
                <label>Private Healthcare</label>
            </value>
            <value>
                <fullName>Non-Sale</fullName>
            </value>
            <value>
                <fullName>Veterinary Surgeon</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Dental School</fullName>
            </value>
            <value>
                <fullName>Dental Practice</fullName>
            </value>
            <value>
                <fullName>Dental Laboratory</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Modx User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>