objects/Account/fields/Customer_Visit_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit_Rescheduling__c</fullName>
    <label>Customer Visit Rescheduling</label>
    <length>100</length>
    <type>Text</type>
</CustomField>