objects/Account/fields/Date_Account_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Status_Changed__c</fullName>
    <inlineHelpText>This is the date the account status changes. It is tracked at the bottom of the account. This is set by Workflow, so you cannot change it.</inlineHelpText>
    <label>Date Account Status Changed</label>
    <type>Date</type>
</CustomField>