objects/Account/fields/Delivery_Charged_For__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charged_For__c</fullName>
    <label>Delivery,Handling &amp; Insurance Charged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>