objects/Account/fields/Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Days__c</fullName>
    <label>Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>