objects/Account/fields/Eqipment__c.field-meta.xml
<CustomField>
    <fullName>Eqipment__c</fullName>
    <label>Is their Product range unique ?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>