objects/Account/fields/FA_Mains_Monitoring_Qty__c.field-meta.xml
<CustomField>
    <fullName>FA_Mains_Monitoring_Qty__c</fullName>
    <label>Mains Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>