objects/Account/fields/FA_O_C_Antenna_Monitoring_Qty__c.field-meta.xml
<CustomField>
    <fullName>FA_O_C_Antenna_Monitoring_Qty__c</fullName>
    <label>O/C Antenna Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>