objects/Account/fields/FA_Smoke_Detector_Qty__c.field-meta.xml
<CustomField>
    <fullName>FA_Smoke_Detector_Qty__c</fullName>
    <label>Smoke Detector Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>