objects/Account/fields/FE1_2_x_1_2m_Fire_Blanket__c.field-meta.xml
<CustomField>
    <fullName>FE1_2_x_1_2m_Fire_Blanket__c</fullName>
    <label>1.2 x 1.2m Fire Blanket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>