objects/Account/fields/FE1_x_1_Fire_Blanket__c.field-meta.xml
<CustomField>
    <fullName>FE1_x_1_Fire_Blanket__c</fullName>
    <label>1 x 1 Fire Blanket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>