objects/Account/fields/FE1KG_Dry_Powder__c.field-meta.xml
<CustomField>
    <fullName>FE1KG_Dry_Powder__c</fullName>
    <label>1KG Dry Powder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>