objects/Account/fields/FE2KG_CO2__c.field-meta.xml
<CustomField>
    <fullName>FE2KG_CO2__c</fullName>
    <label>2KG CO2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>