objects/Account/fields/FE2KG_Dry_powder__c.field-meta.xml
<CustomField>
    <fullName>FE2KG_Dry_powder__c</fullName>
    <label>2KG Dry Powder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>