objects/Account/fields/FE2L_AFFF__c.field-meta.xml
<CustomField>
    <fullName>FE2L_AFFF__c</fullName>
    <label>2L AFFF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>