objects/Account/fields/FE3L_Wet_Chemical__c.field-meta.xml
<CustomField>
    <fullName>FE3L_Wet_Chemical__c</fullName>
    <label>3L Wet Chemical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>