objects/Account/fields/FE4KG_Dry_Powder__c.field-meta.xml
<CustomField>
    <fullName>FE4KG_Dry_Powder__c</fullName>
    <label>4KG Dry Powder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>