objects/Account/fields/FE5KG_CO2__c.field-meta.xml
<CustomField>
    <fullName>FE5KG_CO2__c</fullName>
    <label>5KG CO2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>