objects/Account/fields/FE6L_AFFF__c.field-meta.xml
<CustomField>
    <fullName>FE6L_AFFF__c</fullName>
    <label>6L AFFF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>