objects/Account/fields/FE6L_Water_Qty__c.field-meta.xml
<CustomField>
    <fullName>FE6L_Water_Qty__c</fullName>
    <label>6L Water Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>