objects/Account/fields/FE6L_Wet_Chemical__c.field-meta.xml
<CustomField>
    <fullName>FE6L_Wet_Chemical__c</fullName>
    <label>6L Wet Chemical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>