objects/Account/fields/FE9L_AFFF__c.field-meta.xml
<CustomField>
    <fullName>FE9L_AFFF__c</fullName>
    <label>9L AFFF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>