objects/Account/fields/FE9L_Water_Mist__c.field-meta.xml
<CustomField>
    <fullName>FE9L_Water_Mist__c</fullName>
    <label>9L Water Mist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>