objects/Account/fields/FE9L_Water_Qty__c.field-meta.xml
<CustomField>
    <fullName>FE9L_Water_Qty__c</fullName>
    <label>9L Water Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>