objects/Account/fields/FEAL_Unit__c.field-meta.xml
<CustomField>
    <fullName>FEAL_Unit__c</fullName>
    <label>AL Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>