objects/Account/fields/FEHose_Reel_19mm__c.field-meta.xml
<CustomField>
    <fullName>FEHose_Reel_19mm__c</fullName>
    <label>Hose Reel 19mm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>