objects/Account/fields/FEX3L_Water_Mist__c.field-meta.xml
<CustomField>
    <fullName>FEX3L_Water_Mist__c</fullName>
    <label>3L Water Mist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>