objects/Account/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>IF (  RecordType.Name = &quot;Site&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E000000DLQv&quot;,&quot;Site&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E000000DLQW&quot;,&quot;Customer&quot;,100,200))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>