objects/Account/fields/Fire_Extinguisher_call_out__c.field-meta.xml
<CustomField>
    <fullName>Fire_Extinguisher_call_out__c</fullName>
    <inlineHelpText>Contracted Charge per Fire Extinguisher Service</inlineHelpText>
    <label>FE Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>