objects/Account/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <label>Grading</label>
    <length>30</length>
    <type>Text</type>
</CustomField>