objects/Account/fields/HQ_Visit_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>HQ_Visit_Confirmation_Email__c</fullName>
    <label>HQ Visit Confirmation Email</label>
    <type>Email</type>
</CustomField>