objects/Account/fields/HS_Invoive_Date__c.field-meta.xml
<CustomField>
    <fullName>HS_Invoive_Date__c</fullName>
    <label>HS Invoive Date</label>
    <type>Date</type>
</CustomField>