objects/Account/fields/Import_Reference__c.field-meta.xml
<CustomField>
    <fullName>Import_Reference__c</fullName>
    <label>Import Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>