objects/Account/fields/Inv_Last_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Inv_Last_Qtr__c</fullName>
    <label>Inv Last Qtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>