objects/Account/fields/Inv_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Inv_Last_Year__c</fullName>
    <label>Inv Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>