objects/Account/fields/Inv_Last_Years__c.field-meta.xml
<CustomField>
    <fullName>Inv_Last_Years__c</fullName>
    <label>Inv Last Year</label>
    <summarizedField>Opportunity.Total_Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Sent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Invoice_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/1/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Invoice_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>11/30/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>