objects/Account/fields/invoice_12_Month_total__c.field-meta.xml
<CustomField>
    <fullName>invoice_12_Month_total__c</fullName>
    <label>invoice 12 Month total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>