objects/Account/fields/Invoice_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_To__c</fullName>
    <label>Invoice Email To</label>
    <type>Email</type>
</CustomField>