objects/Account/fields/Invoice_Layout__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Layout__c</fullName>
    <label>Invoice Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>