objects/Account/fields/Invoice_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Terms_Days__c</fullName>
    <label>Payment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>