objects/Account/fields/Invoiced_in_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_in_last_12_months__c</fullName>
    <description>(StageEQUALSClosed Won, Sent) AND (Invoice DateGREATER OR EQUAL01/01/2018) AND (Invoice DateLESS OR EQUAL31/12/2018)</description>
    <label>Invoiced in last 12 months</label>
    <summarizedField>Opportunity.Total_Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Sent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Invoice_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Invoice_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>11/30/2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>