objects/Account/fields/Is_in_a_shopping_centre__c.field-meta.xml
<CustomField>
    <fullName>Is_in_a_shopping_centre__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this if the site is in a shopping centre</inlineHelpText>
    <label>Is in a shopping centre ?</label>
    <type>Checkbox</type>
</CustomField>