objects/Account/fields/Key_Access__c.field-meta.xml
<CustomField>
    <fullName>Key_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Access</label>
    <type>Checkbox</type>
</CustomField>