objects/Account/fields/Last_Survey__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey__c</fullName>
    <label>Last validation check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>