objects/Account/fields/Last_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date__c</fullName>
    <label>Survey Submitted On</label>
    <type>Date</type>
</CustomField>