objects/Account/fields/Latest_Complaint_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Complaint_Date__c</fullName>
    <label>Latest Complaint Date</label>
    <type>Date</type>
</CustomField>