objects/Account/fields/Link_to_Document__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Document__c</fullName>
    <label>Link to Document</label>
    <type>Url</type>
</CustomField>