objects/Account/fields/map_image__c.field-meta.xml
<CustomField>
    <fullName>map_image__c</fullName>
    <formula>IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingCountry + &quot;&amp;zoom=16&amp;size=600x300&amp;markers=color:red|&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingCountry + &quot;&amp;sensor=false&quot;
, &quot;No map available&quot;, 300, 600)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>map image</label>
    <type>Text</type>
</CustomField>